[package]
name = "cli"
version = "0.1.0"
edition = "2021"
about = "项目脚手架"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.0", features = ["default", "derive"]}
handler = {path = "./handler"}

[workspace]
members = ["handler", "exec"]
